==> Xyzarcus/A2B_Cube/STM32CubeIDE/Application/a2bstack-pal/adi_a2b_pal.c <==
#include <string.h>
#include <stdio.h>
#include <errno.h>
#include "adi_a2b_datatypes.h"
#include "adi_a2b_framework.h"
#include "adi_a2b_externs.h"
#include "a2bplugin-slave/adi_a2b_periconfig.h"
#include "a2b/stack.h"
#include "a2b/util.h"
#include "a2b/conf.h"
#include "a2b/i2c.h"
#include "a2bplugin-master/plugin.h"
#include "plugin_priv.h"
#include "i2c.h"
#include "stm32f7xx_hal_def.h"
#include "tim.h"

A2B_PAL_L1_CODE
void
a2b_palInit
    (
    struct a2b_StackPal*    pal,
    A2B_ECB*                ecb
    )
{
    a2b_Char* envValue;

    if ( A2B_NULL != pal )
    {
        a2b_memset(pal, 0, sizeof(*pal));
        a2b_memset(ecb, 0, sizeof(*ecb));

        /* Do necessary base initialization */
        a2b_stackPalInit(pal, ecb);

#ifndef A2B_FEATURE_MEMORY_MANAGER
        /* Use Linux malloc/free */
        pal->memMgrInit      = a2b_pal_memMgrInit;
        pal->memMgrOpen      = a2b_pal_memMgrOpen;
        pal->memMgrMalloc    = a2b_pal_memMgrMalloc;
        pal->memMgrFree      = a2b_pal_memMgrFree;
        pal->memMgrClose     = a2b_pal_memMgrClose;
        pal->memMgrShutdown  = a2b_pal_memMgrShutdown;
#endif

//        pal->timerInit       = a2b_pal_TimerInitFunc;
        pal->timerGetSysTime = a2b_pal_TimerGetSysTimeFunc;
//        pal->timerShutdown   = a2b_pal_TimerShutdownFunc;

#if defined(A2B_FEATURE_SEQ_CHART) || defined(A2B_FEATURE_TRACE)
        pal->logInit         = a2b_pal_logInit;
        pal->logOpen         = a2b_pal_logOpen;
        pal->logClose        = a2b_pal_logClose;
        pal->logWrite        = a2b_pal_logWrite;
        pal->logShutdown     = a2b_pal_logShutdown;
#endif

        pal->i2cInit         = a2b_pal_I2cInit;
        pal->i2cOpen         = a2b_pal_I2cOpenFunc;
        pal->i2cClose        = a2b_pal_I2cCloseFunc;
        pal->i2cRead         = a2b_pal_I2cReadFunc;
        pal->i2cWrite        = a2b_pal_I2cWriteFunc;
        pal->i2cWriteRead    = a2b_pal_I2cWriteReadFunc;
        pal->i2cShutdown     = a2b_pal_I2cShutdownFunc;

//        pal->audioInit       = a2b_pal_AudioInitFunc;
        pal->audioOpen       = a2b_pal_AudioOpenFunc;
        pal->audioClose      = a2b_pal_AudioCloseFunc;
        pal->audioConfig     = a2b_pal_AudioConfigFunc;
        pal->audioShutdown   = a2b_pal_AudioShutdownFunc;

        pal->pluginsLoad     = a2bapp_pluginsLoad;
        pal->pluginsUnload   = a2bapp_pluginsUnload;

        pal->getVersion      = a2b_pal_infoGetVersion;
        pal->getBuild        = a2b_pal_infoGetBuild;

        if ( A2B_NULL != ecb )
        {
            ecb->baseEcb.i2cAddrFmt    = A2B_I2C_ADDR_FMT_7BIT;
            ecb->baseEcb.i2cBusSpeed   = A2B_I2C_BUS_SPEED_400KHZ;
            ecb->baseEcb.i2cMasterAddr = A2B_CONF_DEFAULT_MASTER_NODE_I2C_ADDR;
        }
    }
}

A2B_PAL_L1_CODE	/*ADI_MEM_A2B_CODE_CRIT*/
a2b_HResult a2b_pal_I2cWriteFunc(a2b_Handle hnd,
        a2b_UInt16 addr, a2b_UInt16 nWrite,
        const a2b_Byte* wBuf)
{
	//a2b_HResult nReturnValue = NULL;
	HAL_StatusTypeDef nReturnValue = HAL_ERROR;
    //nReturnValue = adi_a2b_TwiWrite(hnd, addr, nWrite, (a2b_UInt8*)wBuf);
	nReturnValue = HAL_I2C_Master_Transmit(&hi2c1, addr<<1, /*(a2b_UInt8*)*/wBuf, nWrite, 100);

    return nReturnValue;
}

A2B_PAL_L1_CODE	/*ADI_MEM_A2B_CODE_CRIT*/
a2b_HResult a2b_pal_I2cWriteReadFunc(a2b_Handle hnd,
        a2b_UInt16 addr, a2b_UInt16 nWrite,
        /*const a2b_Byte**/uint8_t* wBuf, a2b_UInt16 nRead,
        a2b_Byte* rBuf)
{
	//a2b_HResult nReturnValue = NULL;
	HAL_StatusTypeDef nReturnValue = HAL_ERROR;
    //nReturnValue = adi_a2b_TwiWriteRead(hnd, addr, nWrite, (a2b_UInt8*)wBuf, nRead, rBuf );
	nReturnValue = HAL_I2C_Master_Transmit(&hi2c1, addr<<1, wBuf, nWrite, 100);
	nReturnValue = HAL_I2C_Master_Receive(&hi2c1, addr<<1, rBuf, nRead, 100);

    return nReturnValue;
}

A2B_PAL_L1_CODE	//ADI_MEM_A2B_CODE_CRIT
a2b_UInt32 a2b_pal_TimerGetSysTimeFunc(void)
{
    //return pPalEcb->nCurrTime;
    return HAL_GetTick();
}
