==> Clockworks-Signal-Processing/A2BPnP130RPiZero/app/RP2040/a2bstack-pal/adi_a2b_pal.c <==
#include "a2b/ctypes.h"
#include "a2b/error.h"
#include <string.h>
#include <stdio.h>
#include <errno.h>
#include "adi_a2b_datatypes.h"
#include "a2bplugin-slave/adi_a2b_periconfig.h"
#include "a2b/stack.h"
#include "a2b/util.h"
#include "a2b/conf.h"
#include "a2b/i2c.h"
#include "adi_a2b_pal.h"
#include "pico/stdlib.h"
#include "hardware/spi.h"
#include "hardware/i2c.h"
#include "adi_a2b_externs.h"
#include "pal_i2c.h"
#include "a2bplugin-master/plugin.h"
#include "plugin_priv.h"
#include "pal_timer.h"
#include "pio_spi.h"
#define PROTOZOA 1 // TODO: need to actually get this defined in compile
#define SPI_USE_HW 0
#define SPI_USE_DMA 0
#define USBI_SENSE          19  // USBi sense on GPIO19 on main RP2040
#define PICO_A2B_I2C        i2c0
#define PICO_SDA_PIN        16 // GP2 - U9.13   //GP26 J13.15 SIGMASTUDIO.3
#define PICO_SCL_PIN        17 // GP3 - U9.12 with Jumper on J5.1-2 //GP27 J13.13 SIGMASTUDIO.1
#define PICO_SPI            spi1
#define PICO_SPI_CSN_PIN    14 //GP9 U9.1           //GP22 J13.21 SIGMASTUDIO.9 SS
#define PICO_A2B_I2C       i2c_default
#define PICO_SDA_PIN       PICO_DEFAULT_I2C_SDA_PIN
#define PICO_SCL_PIN       PICO_DEFAULT_I2C_SCL_PIN
#define PICO_SPI_DATARATE  2000 * 1000 // 2MHz with fly wires
#define PICO_SPI_RX_PIN   4 //GP4
#define PICO_SPI_SCK_PIN  2 //GP2
#define PICO_SPI_TX_PIN   3 //GP3
#define PICO_SPI_CSN_PIN  5 //GP5
#define ADI_SPORT_RESULT a2b_UInt32
#define A2B_PAL_L3_CODE
#define A2B_PAL_L3_DATA

void
a2b_palInit
    (
    struct a2b_StackPal*    pal,
    A2B_ECB*                ecb
    )
{

    a2b_UInt8 nIndex = 0u;
    if ( A2B_NULL != pal )
    {
        nIndex = ecb->palEcb.nChainIndex;
        a2b_memset(pal, 0, sizeof(*pal));
        a2b_memset(ecb, 0, sizeof(*ecb));
        ecb->palEcb.nChainIndex = nIndex;

#ifndef A2B_FEATURE_MEMORY_MANAGER
        /* Use Linux malloc/free */
        pal->memMgrInit      = a2b_pal_memMgrInit;
        pal->memMgrOpen      = a2b_pal_memMgrOpen;
        pal->memMgrMalloc    = a2b_pal_memMgrMalloc;
        pal->memMgrFree      = a2b_pal_memMgrFree;
        pal->memMgrClose     = a2b_pal_memMgrClose;
        pal->memMgrShutdown  = a2b_pal_memMgrShutdown;
#endif

        pal->timerInit       = pal_timerInit;
        pal->timerGetSysTime = pal_timerGetSysTime;
        pal->timerShutdown   = pal_timerShutdown;

#if defined(A2B_FEATURE_SEQ_CHART) || defined(A2B_FEATURE_TRACE)
        pal->logInit         = a2b_pal_logInit;
        pal->logOpen         = a2b_pal_logOpen;
        pal->logClose        = a2b_pal_logClose;
        pal->logWrite        = a2b_pal_logWrite;
        pal->logShutdown     = a2b_pal_logShutdown;
#endif

        pal->i2cInit         = a2b_pal_I2cInit;
        pal->i2cOpen         = a2b_pal_I2cOpenFunc;
        pal->i2cClose        = a2b_pal_I2cCloseFunc;
        pal->i2cRead         = a2b_pal_I2cReadFunc;
        pal->i2cWrite        = a2b_pal_I2cWriteFunc;
        pal->i2cWriteRead    = a2b_pal_I2cWriteReadFunc;
        pal->i2cShutdown     = a2b_pal_I2cShutdownFunc;

        pal->spiInit		 = A2B_NULL;
        pal->spiOpen		 = A2B_NULL;
        pal->spiClose		 = A2B_NULL;
        pal->spiRead		 = A2B_NULL;
        pal->spiWrite		 = A2B_NULL;
        pal->spiWriteRead	 = A2B_NULL;
        pal->spiFd			 = A2B_NULL;
		pal->spiShutdown	 = A2B_NULL;
#if 1
        pal->audioInit       = a2b_pal_AudioInitFunc;
        pal->audioOpen       = a2b_pal_AudioOpenFunc;
        pal->audioClose      = a2b_pal_AudioCloseFunc;
        pal->audioConfig     = a2b_pal_AudioConfigFunc;
        pal->audioShutdown   = a2b_pal_AudioShutdownFunc;
#endif

        pal->getVersion      = a2b_pal_infoGetVersion;
        pal->getBuild        = a2b_pal_infoGetBuild;

#if defined A2B_BCF_FROM_FILE_IO
        pal->fileRead		 = a2b_pal_FileRead;
#endif

        if ( A2B_NULL != ecb )
        {
            ecb->baseEcb.i2cAddrFmt    = A2B_I2C_ADDR_FMT_7BIT;
            ecb->baseEcb.i2cBusSpeed   = A2B_I2C_BUS_SPEED_100KHZ;
            ecb->baseEcb.i2cMasterAddr = A2B_CONF_DEFAULT_MASTER_NODE_I2C_ADDR;
        }
    }
}

ADI_MEM_A2B_CODE_CRIT
a2b_HResult a2b_pal_I2cWriteReadFunc(a2b_Handle hnd,
        a2b_UInt16 addr, a2b_UInt16 nWrite,
        const a2b_Byte* wBuf, a2b_UInt16 nRead,
        a2b_Byte* rBuf)
{
    A2B_UNUSED(hnd);

    a2b_UInt32			nReturnValue;
	nReturnValue = i2c_write_timeout_us(PICO_A2B_I2C , addr, wBuf, nWrite, true, 1000*nWrite);
    if((nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
    {
        printf(" I2C transaction write phase for Read Fail : Reg add 0x%x, Reg val 0x%x, status : %d \n", wBuf[0], rBuf[0], nReturnValue);
        // try again
        nReturnValue = i2c_write_timeout_us(PICO_A2B_I2C , addr, wBuf, nWrite, true, 1000*nWrite);
        if((nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
        {
            printf(" Retry I2C writephase for Read Fail : Reg add 0x%x, Reg val 0x%x, status : %d \n", wBuf[0], rBuf[0], nReturnValue);
            return(1); // give up
        }
    }
	nReturnValue = i2c_read_timeout_us(PICO_A2B_I2C , addr, rBuf, nRead, false,1000*nRead);
    if((nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
    {
        printf(" I2C transaction Read Fail : Reg add 0x%x, Reg val 0x%x, status : %d \n", wBuf[0], rBuf[0], nReturnValue);
        //try again
	    nReturnValue = i2c_read_timeout_us(PICO_A2B_I2C , addr, rBuf, nRead, false,1000*nRead);
        if((nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
        {
            printf(" Retry I2C Read Fail : Reg add 0x%x, Reg val 0x%x, status : %d \n", wBuf[0], rBuf[0], nReturnValue);
            return(1);
        }
        else printf(" Retry worked!\n");
    }
    return 0;
}

ADI_MEM_A2B_CODE_CRIT
a2b_HResult a2b_pal_I2cWriteFunc(a2b_Handle hnd,
        a2b_UInt16 addr, a2b_UInt16 nWrite,
        const a2b_Byte* wBuf)
{
    A2B_UNUSED(hnd);
    static a2b_UInt16 lastAddr = 0;

    a2b_Int32			nReturnValue;
#if 0
    if ((addr == 0x68 ) && ( lastAddr == 0x69))
        sleep_ms(1000);   // AD2437 seems to NACK a write and then things go south.
    
    if ((wBuf[0] == 1) && ( wBuf[1]==2))
        printf("\ntime for the old 1-2\n");
    if ((wBuf[0] == 1) && ( wBuf[1]==3))
        printf("\ntime for the old 1-3\n");
#endif
    if ( (wBuf[0] == 0x01) && (wBuf[1] == 0x04) )
        //sleep_ms(10);    // give scope enough time to arm again
        gpio_put(DEBUG_IO_1, true);  // trigger scope, etc
	nReturnValue = i2c_write_timeout_us (PICO_A2B_I2C , addr, wBuf, nWrite, false, 1000*nWrite); 
    gpio_put(DEBUG_IO_1, false);     

    if( (nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
    {
        // gpio_put(DEBUG_IO_1, true);  // trigger scope, etc
        printf(" I2C transaction Write Fail: i2c addr 0x%x, Reg add 0x%x, Reg val 0x%x, code : %d \n", addr, wBuf[0], wBuf[1], nReturnValue);
        //a2b_dump_IDs();
        return 1;
        #if 0
        // IRL I2C is probably now in a broken state, probably want to somehow reset things before a redo
        //otoh a redo means something is really broken.
        // try again
        nReturnValue = i2c_write_timeout_us (PICO_A2B_I2C , addr, wBuf, nWrite, false, 1000*nWrite); 
        if( (nReturnValue == PICO_ERROR_GENERIC) || (nReturnValue == PICO_ERROR_TIMEOUT) || (nReturnValue < 0))
        {
            printf(" I2C retry failed: i2c addr 0x%x, Reg add 0x%x, Reg val 0x%x, code : %d \n", addr, wBuf[0], wBuf[1], nReturnValue);
            return 1;
        }
        else   printf("Retry worked!\n");
        #endif
    }
    else
    {
        if (nReturnValue != nWrite)
        {
            printf(" I2C transaction Write Fail: i2c addr 0x%x, Reg add 0x%x, Reg val 0x%x, expected count: %d actual byte count : %d \n", addr, wBuf[0], wBuf[1], nWrite, nReturnValue);
            return 1;
        }
    }
    lastAddr = addr;
    // test sub node success
    if ( (addr == 0x6B) && (wBuf[0] == 0x9) && (wBuf[1] == 0x21))
    {
        //sleep_ms(10);    // this is a hack to see if changing timing helps
        a2b_I2C_test_0921();
    }

    return 0;
}

ADI_MEM_A2B_CODE_CRIT
a2b_UInt32 a2b_pal_TimerGetSysTimeFunc()
{
    return (time_us_32()/1000);

}
